added the contact page

--- a/views/admin-jobs.ejs
+++ b/views/admin-jobs.ejs
@@ -1,7 +1,9 @@
 <%- include('_header') %>
 <div class="container mt-5">
-  <h1 class="mb-4">Job Management</h1>
-
+  <div class="d-flex justify-content-between align-items-center mb-4">
+    <h1>Job Management</h1>
+    <a href="/admin/job/create" class="btn btn-primary">Create New Job</a>
+  </div>
   <table class="table table-striped">
     <thead>
       <tr>
