--- a/views/admin-services.ejs
+++ b/views/admin-services.ejs
@@ -16,6 +16,9 @@
           class="card-header d-flex justify-content-between align-items-center"
         >
           Current Services
+          <a href="/admin/services/create" class="btn btn-primary btn-sm"
+            >Create New Service</a
+          >
         </div>
         <div class="card-body">
           <table class="table table-striped table-hover">
@@ -65,7 +68,6 @@
     </div>
   </div>
 </div>
-<!-- Add Service Modal -->
 
 <script>
   // Form validation script
