--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -1,9 +1,23 @@
 </main>
-<footer class="bg-light mt-5 py-3">
+<!-- Footer Section -->
+<section class="bg-light mt-5 py-4">
     <div class="container text-center">
-        <p>&copy; 2024 Kenyan Freelancer Marketplace. All rights reserved.</p>
+      <div class="mb-3 footerabout">
+        <a href="/about" class="text-dark mx-3">About Us</a>
+        <a href="/contact" class="text-dark mx-3">Contact</a>
+      </div>
+      <div>
+        <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
+        <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
+        <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
+        <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a>
+      </div>
+      <br />
+      <br />
+      <p>&copy; 2024 Kenyan Freelancer Marketplace. All rights reserved.</p>
     </div>
-</footer>
+  </section>
+  <!-- End Footer Section -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="/public/js/form-validation.js"></script>
