updated the completed jobs query

--- a/views/clientdashboard.ejs
+++ b/views/clientdashboard.ejs
@@ -312,9 +312,7 @@
                 <%= job.title %>
                 <span class="badge bg-success">Completed</span>
               </h6>
-              <p class="mb-1">
-                <strong>Freelancer:</strong> <%= job.freelancer_name %>
-              </p>
+              <p class="mb-1"><strong>Freelancer:</strong> <%= job.name %></p>
               <p class="mb-1">
                 <strong>Payment Amount:</strong> $<%= job.payment_amount %>
               </p>
